force-app/main/default/objects/Lead/fields/Additional_Staff_Count__c.field-meta.xml
<CustomField><fullName>Additional_Staff_Count__c</fullName><description>Preserves the partner application value for additional staff count.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Additional Staff Count</label><type>Number</type><precision>18</precision><scale>0</scale></CustomField>