force-app/main/default/objects/Lead/fields/Additional_Staff_Required__c.field-meta.xml
<CustomField><fullName>Additional_Staff_Required__c</fullName><description>Preserves the partner application value for additional staff required.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Additional Staff Required</label><type>Text</type><length>255</length></CustomField>