force-app/main/default/objects/Lead/fields/Additional_Staff_Total__c.field-meta.xml
<CustomField><fullName>Additional_Staff_Total__c</fullName><description>Preserves the partner application value for additional staff total.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Additional Staff Total</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>