force-app/main/default/objects/Lead/fields/Agreement_Accepted__c.field-meta.xml
<CustomField><fullName>Agreement_Accepted__c</fullName><description>Records agreement accepted for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Agreement Accepted</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>