force-app/main/default/objects/Lead/fields/Agreement_Attempts__c.field-meta.xml
<CustomField><fullName>Agreement_Attempts__c</fullName><description>Records agreement processing attempts for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Agreement Processing Attempts</label><type>Number</type><precision>18</precision><scale>0</scale></CustomField>