force-app/main/default/objects/Lead/fields/Agreement_Authority__c.field-meta.xml
<CustomField><fullName>Agreement_Authority__c</fullName><description>Records authority confirmed for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Authority Confirmed</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>