force-app/main/default/objects/Lead/fields/Agreement_Client_Time__c.field-meta.xml
<CustomField><fullName>Agreement_Client_Time__c</fullName><description>Records browser signing time for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Browser Signing Time</label><type>Text</type><length>30</length></CustomField>