force-app/main/default/objects/Lead/fields/Agreement_Config_Hash__c.field-meta.xml
<CustomField><fullName>Agreement_Config_Hash__c</fullName><description>Records agreement configuration hash for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Agreement Configuration Hash</label><type>Text</type><length>64</length></CustomField>