force-app/main/default/objects/Lead/fields/Agreement_Email_Sent_At__c.field-meta.xml
<CustomField><fullName>Agreement_Email_Sent_At__c</fullName><description>Records agreement email sent at for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Agreement Email Sent At</label><type>DateTime</type></CustomField>