force-app/main/default/objects/Lead/fields/Agreement_Error__c.field-meta.xml
<CustomField><fullName>Agreement_Error__c</fullName><description>Records agreement processing error for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Agreement Processing Error</label><type>LongTextArea</type><length>4000</length><visibleLines>3</visibleLines></CustomField>