force-app/main/default/objects/Lead/fields/Agreement_Job_Id__c.field-meta.xml
<CustomField><fullName>Agreement_Job_Id__c</fullName><description>Records agreement processing job for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Agreement Processing Job</label><type>Text</type><length>18</length></CustomField>