force-app/main/default/objects/Lead/fields/Agreement_PDF_File__c.field-meta.xml
<CustomField><fullName>Agreement_PDF_File__c</fullName><description>Records agreement pdf file version for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Agreement PDF File Version</label><type>Text</type><length>18</length></CustomField>