force-app/main/default/objects/Lead/fields/Agreement_Received_At__c.field-meta.xml
<CustomField><fullName>Agreement_Received_At__c</fullName><description>Records agreement received at for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Agreement Received At</label><type>DateTime</type></CustomField>