force-app/main/default/objects/Lead/fields/Agreement_SHA256__c.field-meta.xml
<CustomField><fullName>Agreement_SHA256__c</fullName><description>Records agreement evidence sha256 for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Agreement Evidence SHA256</label><type>Text</type><length>64</length></CustomField>