force-app/main/default/objects/Lead/fields/Agreement_Signature_File__c.field-meta.xml
<CustomField><fullName>Agreement_Signature_File__c</fullName><description>Records signature file version for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Signature File Version</label><type>Text</type><length>18</length></CustomField>