force-app/main/default/objects/Lead/fields/Agreement_Signed_At__c.field-meta.xml
<CustomField><fullName>Agreement_Signed_At__c</fullName><description>Records signed at for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Signed At</label><type>DateTime</type></CustomField>