force-app/main/default/objects/Lead/fields/Agreement_Snapshot__c.field-meta.xml
<CustomField><fullName>Agreement_Snapshot__c</fullName><description>Records signed agreement snapshot for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Signed Agreement Snapshot</label><type>LongTextArea</type><length>131072</length><visibleLines>3</visibleLines></CustomField>