force-app/main/default/objects/Lead/fields/Agreement_Status__c.field-meta.xml
<CustomField><fullName>Agreement_Status__c</fullName><description>Records agreement status for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Agreement Status</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Received</fullName><default>false</default><label>Received</label></value><value><fullName>Signature Saved</fullName><default>false</default><label>Signature Saved</label></value><value><fullName>PDF Saved</fullName><default>false</default><label>PDF Saved</label></value><value><fullName>Email Sent</fullName><default>false</default><label>Email Sent</label></value><value><fullName>Error</fullName><default>false</default><label>Error</label></value></valueSetDefinition></valueSet></CustomField>