force-app/main/default/objects/Lead/fields/Agreement_Version__c.field-meta.xml
<CustomField><fullName>Agreement_Version__c</fullName><description>Records agreement version for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Agreement Version</label><type>Text</type><length>80</length></CustomField>