force-app/main/default/objects/Lead/fields/Booking_Reference__c.field-meta.xml
<CustomField><fullName>Booking_Reference__c</fullName><description>Preserves the partner application value for booking reference.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Booking Reference</label><type>Text</type><length>80</length><caseSensitive>false</caseSensitive><externalId>true</externalId><unique>true</unique></CustomField>