force-app/main/default/objects/Lead/fields/Declaration_Date__c.field-meta.xml
<CustomField><fullName>Declaration_Date__c</fullName><description>Preserves the partner application value for declaration date.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Declaration Date</label><type>Date</type></CustomField>