force-app/main/default/objects/Lead/fields/Declaration_Name__c.field-meta.xml
<CustomField><fullName>Declaration_Name__c</fullName><description>Preserves the partner application value for declaration name.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Declaration Name</label><type>Text</type><length>200</length></CustomField>