force-app/main/default/objects/Lead/fields/Event_Contact_Email__c.field-meta.xml
<CustomField><fullName>Event_Contact_Email__c</fullName><description>Preserves the partner application value for event contact email.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Event Contact Email</label><type>Email</type></CustomField>