force-app/main/default/objects/Lead/fields/Event_Contact_Mobile__c.field-meta.xml
<CustomField><fullName>Event_Contact_Mobile__c</fullName><description>Preserves the partner application value for event contact mobile.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Event Contact Mobile</label><type>Phone</type></CustomField>