force-app/main/default/objects/Lead/fields/Event_Contact_Name__c.field-meta.xml
<CustomField><fullName>Event_Contact_Name__c</fullName><description>Preserves the partner application value for event contact name.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Event Contact Name</label><type>Text</type><length>200</length></CustomField>