force-app/main/default/objects/Lead/fields/Event_Contact_Title__c.field-meta.xml
<CustomField><fullName>Event_Contact_Title__c</fullName><description>Preserves the partner application value for event contact title.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Event Contact Title</label><type>Text</type><length>128</length></CustomField>