force-app/main/default/objects/Lead/fields/Exhibitor_Hall_Schedule__c.field-meta.xml
<CustomField><fullName>Exhibitor_Hall_Schedule__c</fullName><description>Preserves the partner application value for exhibitor hall schedule.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Exhibitor Hall Schedule</label><type>Text</type><length>255</length></CustomField>