force-app/main/default/objects/Lead/fields/Exhibitor_Space_Price__c.field-meta.xml
<CustomField><fullName>Exhibitor_Space_Price__c</fullName><description>Preserves the partner application value for exhibitor space price.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Exhibitor Space Price</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>