force-app/main/default/objects/Lead/fields/Form_Version__c.field-meta.xml
<CustomField><fullName>Form_Version__c</fullName><description>Preserves the partner application value for form version.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Form Version</label><type>Text</type><length>80</length></CustomField>