force-app/main/default/objects/Lead/fields/Has_Special_Requirements__c.field-meta.xml
<CustomField><fullName>Has_Special_Requirements__c</fullName><description>Preserves the partner application value for has special requirements.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Has Special Requirements</label><type>Text</type><length>255</length></CustomField>