force-app/main/default/objects/Lead/fields/Heavy_Vehicle_Required__c.field-meta.xml
<CustomField><fullName>Heavy_Vehicle_Required__c</fullName><description>Preserves the partner application value for heavy vehicle required.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Heavy Vehicle Required</label><type>Text</type><length>255</length></CustomField>