force-app/main/default/objects/Lead/fields/Included_Staff_Count__c.field-meta.xml
<CustomField><fullName>Included_Staff_Count__c</fullName><description>Preserves the partner application value for included staff count.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Included Staff Count</label><type>Number</type><precision>18</precision><scale>0</scale></CustomField>