force-app/main/default/objects/Lead/fields/Invoice_Additional_Information__c.field-meta.xml
<CustomField><fullName>Invoice_Additional_Information__c</fullName><description>Preserves the partner application value for invoice additional information.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Invoice Additional Information</label><type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines></CustomField>