force-app/main/default/objects/Lead/fields/Invoice_Address__c.field-meta.xml
<CustomField><fullName>Invoice_Address__c</fullName><description>Preserves the partner application value for invoice address.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Invoice Address</label><type>LongTextArea</type><length>1024</length><visibleLines>3</visibleLines></CustomField>