force-app/main/default/objects/Lead/fields/Invoice_Contact_Phone__c.field-meta.xml
<CustomField><fullName>Invoice_Contact_Phone__c</fullName><description>Preserves the partner application value for invoice contact phone.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Invoice Contact Phone</label><type>Phone</type></CustomField>