force-app/main/default/objects/Lead/fields/Invoice_Required__c.field-meta.xml
<CustomField><fullName>Invoice_Required__c</fullName><description>Preserves the partner application value for invoice required.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Invoice Required</label><type>Text</type><length>255</length></CustomField>