force-app/main/default/objects/Lead/fields/Invoiced_Company__c.field-meta.xml
<CustomField><fullName>Invoiced_Company__c</fullName><description>Preserves the partner application value for invoiced company.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Invoiced Company</label><type>Text</type><length>200</length></CustomField>