force-app/main/default/objects/Lead/fields/Invoiced_Email__c.field-meta.xml
<CustomField><fullName>Invoiced_Email__c</fullName><description>Preserves the partner application value for invoiced email.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Invoiced Email</label><type>Email</type></CustomField>