force-app/main/default/objects/Lead/fields/Invoiced_Person__c.field-meta.xml
<CustomField><fullName>Invoiced_Person__c</fullName><description>Preserves the partner application value for invoiced person.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Invoiced Person</label><type>Text</type><length>200</length></CustomField>