force-app/main/default/objects/Lead/fields/Listed_Price_Total__c.field-meta.xml
<CustomField><fullName>Listed_Price_Total__c</fullName><description>Preserves the partner application value for listed price total.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Listed Price Total</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>