force-app/main/default/objects/Lead/fields/Logo_Upload_URL__c.field-meta.xml
<CustomField><fullName>Logo_Upload_URL__c</fullName><description>Preserves the partner application value for logo upload url.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Logo Upload URL</label><type>Text</type><length>255</length></CustomField>