force-app/main/default/objects/Lead/fields/NTE_Event_Code__c.field-meta.xml
<CustomField><fullName>NTE_Event_Code__c</fullName><description>Preserves the partner application value for nte event code.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>NTE Event Code</label><type>Text</type><length>20</length></CustomField>