force-app/main/default/objects/Lead/fields/Payment_Method__c.field-meta.xml
<CustomField><fullName>Payment_Method__c</fullName><description>Preserves the partner application value for payment method.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Payment Method</label><type>Text</type><length>255</length></CustomField>