force-app/main/default/objects/Lead/fields/Planned_Exhibitor_Count__c.field-meta.xml
<CustomField><fullName>Planned_Exhibitor_Count__c</fullName><description>Preserves the partner application value for planned exhibitor count.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Planned Exhibitor Count</label><type>Number</type><precision>18</precision><scale>0</scale></CustomField>