force-app/main/default/objects/Lead/fields/Power_Socket_Total__c.field-meta.xml
<CustomField><fullName>Power_Socket_Total__c</fullName><description>Preserves the partner application value for power socket total.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Power Socket Total</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>