force-app/main/default/objects/Lead/fields/Power_Socket_Unit_Price__c.field-meta.xml
<CustomField><fullName>Power_Socket_Unit_Price__c</fullName><description>Preserves the partner application value for power socket unit price.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Power Socket Unit Price</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>