force-app/main/default/objects/Lead/fields/Pricing_Status__c.field-meta.xml
<CustomField><fullName>Pricing_Status__c</fullName><description>Preserves the partner application value for pricing status.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Pricing Status</label><type>Text</type><length>255</length></CustomField>