force-app/main/default/objects/Lead/fields/Pricing_Version__c.field-meta.xml
<CustomField><fullName>Pricing_Version__c</fullName><description>Preserves the partner application value for pricing version.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Pricing Version</label><type>Text</type><length>255</length></CustomField>