force-app/main/default/objects/Lead/fields/Purchase_Order__c.field-meta.xml
<CustomField><fullName>Purchase_Order__c</fullName><description>Preserves the partner application value for purchase order.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Purchase Order</label><type>Text</type><length>255</length></CustomField>