force-app/main/default/objects/Lead/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField><fullName>Purchase_Order_Number__c</fullName><description>Preserves the partner application value for purchase order number.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Purchase Order Number</label><type>Text</type><length>100</length></CustomField>