force-app/main/default/objects/Lead/fields/Quote_Required_for_PO__c.field-meta.xml
<CustomField><fullName>Quote_Required_for_PO__c</fullName><description>Preserves the partner application value for quote required for po.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Quote Required for PO</label><type>Text</type><length>255</length></CustomField>