force-app/main/default/objects/Lead/fields/Signature_PNG_Base64__c.field-meta.xml
<CustomField><fullName>Signature_PNG_Base64__c</fullName><description>Records signature png transport for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Signature PNG Transport</label><type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines></CustomField>