force-app/main/default/objects/Lead/fields/Signature_Vector__c.field-meta.xml
<CustomField><fullName>Signature_Vector__c</fullName><description>Records signature vector for the auditable signed agreement workflow.</description><inlineHelpText>Managed by agreement processing; use the signature viewer to inspect the agreement.</inlineHelpText><label>Signature Vector</label><type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines></CustomField>