force-app/main/default/objects/Lead/fields/Sponsor_Package__c.field-meta.xml
<CustomField><fullName>Sponsor_Package__c</fullName><description>Preserves the partner application value for sponsor package.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Sponsor Package</label><type>MultiselectPicklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Headline Partner</fullName><default>false</default><label>Headline Partner</label></value><value><fullName>Gold Partner</fullName><default>false</default><label>Gold Partner</label></value><value><fullName>Premier Partner</fullName><default>false</default><label>Premier Partner</label></value><value><fullName>Champion Partner</fullName><default>false</default><label>Champion Partner</label></value><value><fullName>Zone Sponsor</fullName><default>false</default><label>Zone Sponsor</label></value><value><fullName>Community Stage Sponsor</fullName><default>false</default><label>Community Stage Sponsor</label></value><value><fullName>Podcast Corner Sponsor</fullName><default>false</default><label>Podcast Corner Sponsor</label></value><value><fullName>Event Guide Sponsor</fullName><default>false</default><label>Event Guide Sponsor</label></value><value><fullName>Delegate Tote Bag Sponsor</fullName><default>false</default><label>Delegate Tote Bag Sponsor</label></value><value><fullName>Helmet Bay Sponsor</fullName><default>false</default><label>Helmet Bay Sponsor</label></value><value><fullName>Auditorium Sponsor</fullName><default>false</default><label>Auditorium Sponsor</label></value><value><fullName>Live Stream Sponsor</fullName><default>false</default><label>Live Stream Sponsor</label></value><value><fullName>Wristband Sponsor</fullName><default>false</default><label>Wristband Sponsor</label></value><value><fullName>Escapade Sponsor</fullName><default>false</default><label>Escapade Sponsor</label></value></valueSetDefinition></valueSet><visibleLines>3</visibleLines></CustomField>