force-app/main/default/objects/Lead/fields/Sponsor_Package_Total__c.field-meta.xml
<CustomField><fullName>Sponsor_Package_Total__c</fullName><description>Preserves the partner application value for sponsor package total.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Sponsor Package Total</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>