force-app/main/default/objects/Lead/fields/Sponsored_Name__c.field-meta.xml
<CustomField><fullName>Sponsored_Name__c</fullName><description>Preserves the partner application value for sponsored name.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Sponsored Name</label><type>Text</type><length>200</length></CustomField>