force-app/main/default/objects/Lead/fields/Stand_Equipment__c.field-meta.xml
<CustomField><fullName>Stand_Equipment__c</fullName><description>Preserves the partner application value for stand equipment.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Stand Equipment</label><type>LongTextArea</type><length>1024</length><visibleLines>3</visibleLines></CustomField>