force-app/main/default/objects/Lead/fields/Stand_Extra_Notes__c.field-meta.xml
<CustomField><fullName>Stand_Extra_Notes__c</fullName><description>Preserves the partner application value for stand extra notes.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Stand Extra Notes</label><type>LongTextArea</type><length>1024</length><visibleLines>3</visibleLines></CustomField>