force-app/main/default/objects/Lead/fields/Stand_Power__c.field-meta.xml
<CustomField><fullName>Stand_Power__c</fullName><description>Preserves the partner application value for stand power.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Stand Power</label><type>Text</type><length>255</length></CustomField>