force-app/main/default/objects/Lead/fields/Stand_Special_Requirements__c.field-meta.xml
<CustomField><fullName>Stand_Special_Requirements__c</fullName><description>Preserves the partner application value for stand special requirements.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Stand Special Requirements</label><type>LongTextArea</type><length>1024</length><visibleLines>3</visibleLines></CustomField>