force-app/main/default/objects/Lead/fields/Supplier_Agreement_Required__c.field-meta.xml
<CustomField><fullName>Supplier_Agreement_Required__c</fullName><description>Preserves the partner application value for supplier agreement required.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Supplier Agreement Required</label><type>Text</type><length>255</length></CustomField>