force-app/main/default/objects/Lead/fields/Terms_and_Conditions__c.field-meta.xml
<CustomField><fullName>Terms_and_Conditions__c</fullName><description>Preserves the partner application value for terms and conditions.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Terms and Conditions</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>