force-app/main/default/objects/Lead/fields/Total_Staff_Count__c.field-meta.xml
<CustomField><fullName>Total_Staff_Count__c</fullName><description>Preserves the partner application value for total staff count.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Total Staff Count</label><type>Number</type><precision>18</precision><scale>0</scale></CustomField>