force-app/main/default/objects/Lead/fields/Trading_Name__c.field-meta.xml
<CustomField><fullName>Trading_Name__c</fullName><description>Preserves the partner application value for trading name.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Trading Name</label><type>Text</type><length>255</length></CustomField>