force-app/main/default/objects/Lead/fields/Web_Form_Type__c.field-meta.xml
<CustomField><fullName>Web_Form_Type__c</fullName><description>Preserves the partner application value for web form type.</description><inlineHelpText>Captured from the applicant form.</inlineHelpText><label>Web Form Type</label><type>Text</type><length>255</length></CustomField>